force-app/main/default/objects/BillingItem__c/BillingItem__c.object-meta.xml
<CustomObject>
    <description>SAP Billing Item - managed by smartInteract.
Holds Item level Billing Document information.</description>
    <label>Billing Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>BillingItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>