force-app/main/default/objects/BillingItem__c/fields/BillingDocId__c.field-meta.xml
<CustomField>
    <fullName>BillingDocId__c</fullName>
    <label>Billing Doc</label>
    <referenceTo>BillingDoc__c</referenceTo>
    <relationshipLabel>Billing Items</relationshipLabel>
    <relationshipName>BillingItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>