force-app/main/default/objects/BillingItem__c/fields/ItemNumner__c.field-meta.xml
<CustomField>
    <fullName>ItemNumner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Numner</label>
    <length>10</length>
    <type>Text</type>
</CustomField>