force-app/main/default/objects/BillingItem__c/fields/SapId__c.field-meta.xml
<CustomField>
    <fullName>SapId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sap Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>