force-app/main/default/objects/BillingItem__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>